--- a/index.html
+++ b/index.html
@@ -25,22 +25,23 @@
       </ul>
 
       <ul class="repos-list" id="repos-list">
-        <!-- //////////////////////////////////// -->
         <li class="repos-list__item">
           <ul class="repos-list__info block-info-list">
-            <li class="block-info-list__item">Name:
+            <li class="block-info-list__item block-info-list__item--name" title="Repository name.">
               <a class="block-info-list__link" href="#" target="_blank"
-                rel="noopener noreferrer">name</a>
+                rel="noopener noreferrer">Repository name</a>
             </li>
-            <li class="block-info-list__item">Owner:
+            <li class="block-info-list__item block-info-list__item--owner"
+              title="Repository owner.">
               <a class="block-info-list__link" href="#" target="_blank"
-                rel="noopener noreferrer">owner</a>
+                rel="noopener noreferrer">Repository owner</a>
             </li>
-            <li class="block-info-list__item">Stars:
+            <li class="block-info-list__item block-info-list__item--stars"
+              title="Number of repository stars.">
               <span class="block-info-list__score">7654</span>
             </li>
           </ul>
-          <button class="repos-list__button" type="button"></button>
+          <button class="repos-list__button" type="button" title="Remove from the list"></button>
         </li>
       </ul>
 
