Добавляет итоговую реализацию авто-дополнения
добавляет задержку отправки запросов (debounce)

--- a/index.html
+++ b/index.html
@@ -13,9 +13,9 @@
     <main class="app">
 
       <!-- <input id="query-button" type="button" value="caramba-repo"> -->
-      <input id="query-button" type="button" value="react">
+      <!-- <input id="query-button" type="button" value="react"> -->
 
-      <input class="search-field" id="search-field" autocomplete="off" type="text"
+      <input class="search-field" id="search-field" autocomplete="off" type="search"
         placeholder="Введите название репозитория...">
 
       <ul class="autocomplete-list" id="autocomplete-list">
@@ -60,7 +60,7 @@
 
     </main>
   </div>
-  <script src="main.js"></script>
+  <script src="main.js" type="module"></script>
 </body>
 
 </html>
