--- a/index.html
+++ b/index.html
@@ -11,53 +11,12 @@
 <body>
   <div class="container">
     <main class="app">
-
       <form class="search-form">
         <input class="search-field" id="search-field" autocomplete="off" type="search"
           placeholder="Введите название репозитория...">
-
-        <ul class="autocomplete-list" id="autocomplete-list">
-          <!-- <li class="autocomplete-list__item">
-            <span class="autocomplete-list__repo-name">repo-name</span>
-            <span class="autocomplete-list__repo-owner">-> repo-owner -></span>
-            <span class="autocomplete-list__repo-stars">repo-stars</span>
-          </li>
-          <li class="autocomplete-list__item">
-            <span class="autocomplete-list__repo-name">repo-name</span>
-            <span class="autocomplete-list__repo-owner">-> repo-owner -></span>
-            <span class="autocomplete-list__repo-stars">repo-stars</span>
-          </li>
-          <li class="autocomplete-list__item">
-            <span class="autocomplete-list__repo-name">repo-name</span>
-            <span class="autocomplete-list__repo-owner">-> repo-owner -></span>
-            <span class="autocomplete-list__repo-stars">repo-stars</span>
-          </li> -->
-        </ul>
+        <ul class="autocomplete-list" id="autocomplete-list"> </ul>
       </form>
-
-      <ul class="repos-list" id="repos-list">
-        <!-- <li class="repos-list__item">
-          <ul class="repos-list__info block-info-list">
-            <li class="block-info-list__item block-info-list__item--name" title="Repository name.">
-              <a class="block-info-list__link" href="#" target="_blank"
-                rel="noopener noreferrer">Repository name</a>
-            </li>
-            <li class="block-info-list__item block-info-list__item--owner"
-              title="Repository owner.">
-              <a class="block-info-list__link" href="#" target="_blank"
-                rel="noopener noreferrer">Repository owner</a>
-            </li>
-            <li class="block-info-list__item block-info-list__item--stars"
-              title="Number of repository stars.">
-              <span class="block-info-list__score">7654</span>
-            </li>
-          </ul>
-          <button class="repos-list__button" id="card-close-button" type="button"
-            title="Remove from the list"></button>
-        </li> -->
-        <!-- //////////////////////////////////////////////////////// -->
-      </ul>
-
+      <ul class="repos-list" id="repos-list"> </ul>
     </main>
   </div>
   <script src="scripts/main.js" type="module"></script>
